[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/theme/fonts/RubikDirt-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/ui/upgrade_entry.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/icons/icon_sunlight.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 2 )

[node name="UpgradeEntry" type="MarginContainer"]
margin_right = 374.0
margin_bottom = 73.0
theme = ExtResource( 1 )
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 372.0
margin_bottom = 74.0
mouse_filter = 2
color = Color( 0, 0.235294, 0.443137, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 372.0
margin_bottom = 74.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 4
custom_constants/margin_left = 6
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 364.0
margin_bottom = 68.0
mouse_filter = 2

[node name="HBoxContainer_Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 358.0
margin_bottom = 24.0
mouse_filter = 2

[node name="Label_UpgradeName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_Header"]
margin_right = 177.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "UPGRADE NAME"

[node name="Label_Level" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_Header"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "1/3"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 358.0
margin_bottom = 64.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 263.0
margin_bottom = 36.0
size_flags_horizontal = 3
custom_constants/margin_left = 4

[node name="Label_Details" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 8.0
margin_right = 263.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Details"

[node name="Label_Price" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 267.0
margin_right = 278.0
margin_bottom = 36.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "3"
align = 2
valign = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 318.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 0 )
texture = ExtResource( 4 )
expand = true

[node name="Button_Buy" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 358.0
margin_bottom = 36.0
rect_min_size = Vector2( 36, 36 )
text = "+"

[connection signal="mouse_entered" from="." to="." method="_on_UpgradeEntry_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button_Buy" to="." method="_on_Button_Buy_pressed"]
